# cell-project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  macros.rs
tests/: compile_fail.rs  pass.rs
tests/compile_fail/: deref_coerce.rs  deref_coerce.stderr  no_field.rs  no_field.stderr  unsized.rs  unsized.stderr  use_after_free.rs  use_after_free.stderr  variance_check.rs  variance_check.stderr
tests/pass/: generic.rs  person.rs  type_alias.rs
