[package]
name = "cell-project"
version = "0.1.0"
authors = ["KrishnaSannasi <krishna.sd.2012@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Safe interface for cell projection"
homepage = "https://github.com/KrishnaSannasi/cell-project"
repository = "https://github.com/KrishnaSannasi/cell-project"
readme = "README.md"
keywords = ["cell", "project", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

nightly = []

[dependencies]

[dev-dependencies]
trybuild = '*'